--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,6 +133,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-linear-gradient')
+    compile project(':lottie-react-native')
+    compile project(':react-native-charts-wrapper')
+    compile project(':realm')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
